; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/i386/sys/extr_i386_get_ldt.c_i386_get_ldt.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/i386/sys/extr_i386_get_ldt.c_i386_get_ldt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.descriptor = type { i32 }
%struct.i386_ldt_args = type { i32, i32, %union.descriptor* }

@I386_GET_LDT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @i386_get_ldt(i32 %0, %union.descriptor* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %union.descriptor*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.i386_ldt_args, align 8
  store i32 %0, i32* %4, align 4
  store %union.descriptor* %1, %union.descriptor** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = getelementptr inbounds %struct.i386_ldt_args, %struct.i386_ldt_args* %7, i32 0, i32 0
  store i32 %8, i32* %9, align 8
  %10 = load %union.descriptor*, %union.descriptor** %5, align 8
  %11 = getelementptr inbounds %struct.i386_ldt_args, %struct.i386_ldt_args* %7, i32 0, i32 2
  store %union.descriptor* %10, %union.descriptor** %11, align 8
  %12 = load i32, i32* %6, align 4
  %13 = getelementptr inbounds %struct.i386_ldt_args, %struct.i386_ldt_args* %7, i32 0, i32 1
  store i32 %12, i32* %13, align 4
  %14 = load i32, i32* @I386_GET_LDT, align 4
  %15 = call i32 @sysarch(i32 %14, %struct.i386_ldt_args* %7)
  ret i32 %15
}

declare dso_local i32 @sysarch(i32, %struct.i386_ldt_args*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
